# grpcvcr

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  mkdocs.yml  pyproject.toml  spec.md
.claude/: settings.local.json
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  feature-request.yaml
.github/workflows/: ci.yml  release.yml
docs/: index.md  installation.md  quickstart.md
docs/api/: cassette.md  channel.md  errors.md  index.md  matchers.md  record-modes.md
docs/concepts/: cassettes.md  index.md  matchers.md  record-modes.md  streaming.md
docs/examples/: advanced.md  basic.md
docs/guides/: async.md  ci-testing.md  custom-matchers.md  index.md  pytest.md
src/grpcvcr/: __init__.py  cassette.py  channel.py  errors.py  matchers.py  pytest_plugin.py  record_modes.py  serialization.py
src/grpcvcr/interceptors/: __init__.py  _base.py  aio.py  sync.py
src/grpcvr/: __init__.py  cassette.py  channel.py  errors.py  matchers.py  pytest_plugin.py  record_modes.py  serialization.py
src/grpcvr/interceptors/: __init__.py  _base.py  aio.py  sync.py
tests/: conftest.py  test_edge_cases.py  test_errors.py  test_examples.py  test_integration.py  test_integration_async.py  test_matchers.py  test_record_modes.py  test_serialization.py
tests/protos/: test_service.proto
